// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className="AppMenu-root-190"
  >
    <header
      className="MuiPaper-root-205 MuiPaper-elevation4-211 MuiAppBar-root-197 MuiAppBar-positionFixed-198 MuiAppBar-colorPrimary-203 mui-fixed"
    >
      <div
        className="MuiToolbar-root-232 MuiToolbar-regular-234 MuiToolbar-gutters-233 AppMenu-nowrap-192"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-242 MuiIconButton-root-236 MuiIconButton-colorInherit-237 AppMenu-menuButton-193"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-241"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-245"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-252"
          />
        </button>
        <h2
          className="MuiTypography-root-259 MuiTypography-title-265 MuiTypography-colorInherit-278 AppMenu-flex-191"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="AppMenu-spacer-195"
    />
  </div>
  <div
    className="APIComponent-root-297"
  >
    <div
      className="MuiPaper-root-205 MuiPaper-elevation1-208 MuiPaper-rounded-206 MuiCard-root-302 APIComponent-card-298"
    >
      <div
        className="MuiCardHeader-root-303"
      >
        <div
          className="MuiCardHeader-content-306"
        >
          <span
            className="MuiTypography-root-259 MuiTypography-headline-264 MuiCardHeader-title-307"
          >
            New Tournament
          </span>
        </div>
      </div>
      <hr
        className="MuiDivider-root-309"
      />
      <div
        className="MuiCardContent-root-313 APIComponent-content-299"
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 MuiFormControl-fullWidth-317 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-marginDense-320"
            data-shrink={false}
            htmlFor="tournament-name"
          >
             Name
          </label>
          <div
            className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={false}
              className="MuiInput-input-336 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-name"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 MuiFormControl-fullWidth-317 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-marginDense-320"
            data-shrink={false}
            htmlFor="tournament-description"
          >
            Description
          </label>
          <div
            className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-description"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="css-10nd86i APIComponent-field-300"
          id="tournament-category"
          onKeyDown={[Function]}
        >
          <div
            aria-describedby={undefined}
            className="MuiFormControl-root-314 MuiFormControl-fullWidth-317"
          >
            <label
              className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321"
              data-shrink={true}
              htmlFor={undefined}
            >
              Category
            </label>
            <div
              className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
            >
              <div
                aria-invalid={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-336 IntegrationReactSelect-input-342"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={false}
                rows={undefined}
                type="text"
                value={undefined}
              >
                <div
                  className="IntegrationReactSelect-valueContainer-343"
                >
                  <p
                    className="MuiTypography-root-259 MuiTypography-body1-268 MuiTypography-colorTextSecondary-282 IntegrationReactSelect-placeholder-348"
                  >
                    Select or Type...
                  </p>
                  <div
                    className="css-1hrkh7z"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        className={undefined}
                        disabled={false}
                        id="react-select-5-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1wy0on6"
                >
                  <span
                    className="css-d8oujb"
                  />
                  <div
                    aria-hidden="true"
                    className="css-1ep9fjw"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-19bqh2r"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321 MuiInputLabel-marginDense-320"
            data-shrink={true}
            htmlFor="tournament-date"
          >
            Date
          </label>
          <div
            className="MuiInput-root-328 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputType-339 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-date"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="date"
              value="2018-08-23"
            />
          </div>
        </div>
        <div
          className="css-10nd86i APIComponent-field-300"
          id="tournament-pairingMethod"
          onKeyDown={[Function]}
        >
          <div
            aria-describedby={undefined}
            className="MuiFormControl-root-314 MuiFormControl-fullWidth-317"
          >
            <label
              className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321"
              data-shrink={true}
              htmlFor={undefined}
            >
              Pairing Method
            </label>
            <div
              className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
            >
              <div
                aria-invalid={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-336 IntegrationReactSelect-input-342"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={false}
                rows={undefined}
                type="text"
                value={undefined}
              >
                <div
                  className="IntegrationReactSelect-valueContainer-343"
                >
                  <p
                    className="MuiTypography-root-259 MuiTypography-body1-268 MuiTypography-colorTextSecondary-282 IntegrationReactSelect-placeholder-348"
                  >
                    Select...
                  </p>
                  <div
                    className="css-1hrkh7z"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        className={undefined}
                        disabled={false}
                        id="react-select-6-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1wy0on6"
                >
                  <span
                    className="css-d8oujb"
                  />
                  <div
                    aria-hidden="true"
                    className="css-1ep9fjw"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-19bqh2r"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-10nd86i APIComponent-field-300"
          id="tournament-pairingMethodInitial"
          onKeyDown={[Function]}
        >
          <div
            aria-describedby={undefined}
            className="MuiFormControl-root-314 MuiFormControl-fullWidth-317"
          >
            <label
              className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321"
              data-shrink={true}
              htmlFor={undefined}
            >
              Initial Pairing Method
            </label>
            <div
              className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
            >
              <div
                aria-invalid={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-336 IntegrationReactSelect-input-342"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={false}
                rows={undefined}
                type="text"
                value={undefined}
              >
                <div
                  className="IntegrationReactSelect-valueContainer-343"
                >
                  <p
                    className="MuiTypography-root-259 MuiTypography-body1-268 MuiTypography-colorTextSecondary-282 IntegrationReactSelect-placeholder-348"
                  >
                    Select...
                  </p>
                  <div
                    className="css-1hrkh7z"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        className={undefined}
                        disabled={false}
                        id="react-select-7-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1wy0on6"
                >
                  <span
                    className="css-d8oujb"
                  />
                  <div
                    aria-hidden="true"
                    className="css-1ep9fjw"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-19bqh2r"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321 MuiInputLabel-marginDense-320"
            data-shrink={true}
            htmlFor="tournament-podSizeMinimum"
          >
            Minimum Pod Size
          </label>
          <div
            className="MuiInput-root-328 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputType-339 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-podSizeMinimum"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="number"
              value={0}
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321 MuiInputLabel-marginDense-320"
            data-shrink={true}
            htmlFor="tournament-podSizeMaximum"
          >
            Maximum Pod Size
          </label>
          <div
            className="MuiInput-root-328 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputType-339 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-podSizeMaximum"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="number"
              value={0}
            />
          </div>
        </div>
      </div>
      <hr
        className="MuiDivider-root-309"
      />
      <div
        className="MuiCardActions-root-351"
      >
        <button
          aria-label="Create"
          className="MuiButtonBase-root-242 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358 APIComponent-right-301 MuiCardActions-action-352"
          disabled={false}
          id="tournament-submit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-354"
          >
            Create
          </span>
          <span
            className="MuiTouchRipple-root-252"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="AppMenu-root-190"
  >
    <header
      className="MuiPaper-root-205 MuiPaper-elevation4-211 MuiAppBar-root-197 MuiAppBar-positionFixed-198 MuiAppBar-colorPrimary-203 mui-fixed"
    >
      <div
        className="MuiToolbar-root-232 MuiToolbar-regular-234 MuiToolbar-gutters-233 AppMenu-nowrap-192"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-242 MuiIconButton-root-236 MuiIconButton-colorInherit-237 AppMenu-menuButton-193"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-241"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-245"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-252"
          />
        </button>
        <h2
          className="MuiTypography-root-259 MuiTypography-title-265 MuiTypography-colorInherit-278 AppMenu-flex-191"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="AppMenu-spacer-195"
    />
  </div>
  <div
    className="APIComponent-root-297"
  >
    <div
      className="MuiPaper-root-205 MuiPaper-elevation1-208 MuiPaper-rounded-206 MuiCard-root-302 APIComponent-card-298"
    >
      <div
        className="MuiCardHeader-root-303"
      >
        <div
          className="MuiCardHeader-content-306"
        >
          <span
            className="MuiTypography-root-259 MuiTypography-headline-264 MuiCardHeader-title-307"
          >
            New Tournament
          </span>
        </div>
      </div>
      <hr
        className="MuiDivider-root-309"
      />
      <div
        className="MuiCardContent-root-313 APIComponent-content-299"
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 MuiFormControl-fullWidth-317 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-marginDense-320"
            data-shrink={false}
            htmlFor="tournament-name"
          >
             Name
          </label>
          <div
            className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={false}
              className="MuiInput-input-336 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-name"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 MuiFormControl-fullWidth-317 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-marginDense-320"
            data-shrink={false}
            htmlFor="tournament-description"
          >
            Description
          </label>
          <div
            className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-description"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="css-10nd86i APIComponent-field-300"
          id="tournament-category"
          onKeyDown={[Function]}
        >
          <div
            aria-describedby={undefined}
            className="MuiFormControl-root-314 MuiFormControl-fullWidth-317"
          >
            <label
              className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321"
              data-shrink={true}
              htmlFor={undefined}
            >
              Category
            </label>
            <div
              className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
            >
              <div
                aria-invalid={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-336 IntegrationReactSelect-input-342"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={false}
                rows={undefined}
                type="text"
                value={undefined}
              >
                <div
                  className="IntegrationReactSelect-valueContainer-343"
                >
                  <p
                    className="MuiTypography-root-259 MuiTypography-body1-268 MuiTypography-colorTextSecondary-282 IntegrationReactSelect-placeholder-348"
                  >
                    Select or Type...
                  </p>
                  <div
                    className="css-1hrkh7z"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        className={undefined}
                        disabled={false}
                        id="react-select-8-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1wy0on6"
                >
                  <span
                    className="css-d8oujb"
                  />
                  <div
                    aria-hidden="true"
                    className="css-1ep9fjw"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-19bqh2r"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321 MuiInputLabel-marginDense-320"
            data-shrink={true}
            htmlFor="tournament-date"
          >
            Date
          </label>
          <div
            className="MuiInput-root-328 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputType-339 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-date"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="date"
              value="2018-08-23"
            />
          </div>
        </div>
        <div
          className="css-10nd86i APIComponent-field-300"
          id="tournament-pairingMethod"
          onKeyDown={[Function]}
        >
          <div
            aria-describedby={undefined}
            className="MuiFormControl-root-314 MuiFormControl-fullWidth-317"
          >
            <label
              className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321"
              data-shrink={true}
              htmlFor={undefined}
            >
              Pairing Method
            </label>
            <div
              className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
            >
              <div
                aria-invalid={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-336 IntegrationReactSelect-input-342"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={false}
                rows={undefined}
                type="text"
                value={undefined}
              >
                <div
                  className="IntegrationReactSelect-valueContainer-343"
                >
                  <p
                    className="MuiTypography-root-259 MuiTypography-body1-268 MuiTypography-colorTextSecondary-282 IntegrationReactSelect-placeholder-348"
                  >
                    Select...
                  </p>
                  <div
                    className="css-1hrkh7z"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        className={undefined}
                        disabled={false}
                        id="react-select-9-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1wy0on6"
                >
                  <span
                    className="css-d8oujb"
                  />
                  <div
                    aria-hidden="true"
                    className="css-1ep9fjw"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-19bqh2r"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-10nd86i APIComponent-field-300"
          id="tournament-pairingMethodInitial"
          onKeyDown={[Function]}
        >
          <div
            aria-describedby={undefined}
            className="MuiFormControl-root-314 MuiFormControl-fullWidth-317"
          >
            <label
              className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321"
              data-shrink={true}
              htmlFor={undefined}
            >
              Initial Pairing Method
            </label>
            <div
              className="MuiInput-root-328 MuiInput-fullWidth-335 MuiInput-formControl-329 MuiInput-underline-332"
            >
              <div
                aria-invalid={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-336 IntegrationReactSelect-input-342"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={false}
                rows={undefined}
                type="text"
                value={undefined}
              >
                <div
                  className="IntegrationReactSelect-valueContainer-343"
                >
                  <p
                    className="MuiTypography-root-259 MuiTypography-body1-268 MuiTypography-colorTextSecondary-282 IntegrationReactSelect-placeholder-348"
                  >
                    Select...
                  </p>
                  <div
                    className="css-1hrkh7z"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        className={undefined}
                        disabled={false}
                        id="react-select-10-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1wy0on6"
                >
                  <span
                    className="css-d8oujb"
                  />
                  <div
                    aria-hidden="true"
                    className="css-1ep9fjw"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-19bqh2r"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321 MuiInputLabel-marginDense-320"
            data-shrink={true}
            htmlFor="tournament-podSizeMinimum"
          >
            Minimum Pod Size
          </label>
          <div
            className="MuiInput-root-328 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputType-339 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-podSizeMinimum"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="number"
              value={0}
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-314 MuiFormControl-marginDense-316 APIComponent-field-300"
        >
          <label
            className="MuiFormLabel-root-323 MuiInputLabel-root-318 MuiInputLabel-formControl-319 MuiInputLabel-animated-322 MuiInputLabel-shrink-321 MuiInputLabel-marginDense-320"
            data-shrink={true}
            htmlFor="tournament-podSizeMaximum"
          >
            Maximum Pod Size
          </label>
          <div
            className="MuiInput-root-328 MuiInput-formControl-329 MuiInput-underline-332"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-336 MuiInput-inputType-339 MuiInput-inputMarginDense-337"
              defaultValue={undefined}
              disabled={false}
              id="tournament-podSizeMaximum"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="number"
              value={0}
            />
          </div>
        </div>
      </div>
      <hr
        className="MuiDivider-root-309"
      />
      <div
        className="MuiCardActions-root-351"
      >
        <button
          aria-label="Create"
          className="MuiButtonBase-root-242 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358 APIComponent-right-301 MuiCardActions-action-352"
          disabled={false}
          id="tournament-submit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-354"
          >
            Create
          </span>
          <span
            className="MuiTouchRipple-root-252"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
